#6 fix(moves) - Test fixes